--- a/public/css/output.css
+++ b/public/css/output.css
@@ -744,6 +744,30 @@ select {
   bottom: 1.25rem;
 }
 
+.-top-10 {
+  top: -2.5rem;
+}
+
+.-right-9 {
+  right: -2.25rem;
+}
+
+.-right-10 {
+  right: -2.5rem;
+}
+
+.top-\[90px\] {
+  top: 90px;
+}
+
+.-left-7 {
+  left: -1.75rem;
+}
+
+.-bottom-7 {
+  bottom: -1.75rem;
+}
+
 .bottom-4 {
   bottom: 1rem;
 }
@@ -770,6 +794,10 @@ select {
 
 .z-30 {
   z-index: 30;
+}
+
+.z-\[-1\] {
+  z-index: -1;
 }
 
 .col-span-3 {
@@ -1092,6 +1120,10 @@ select {
   margin-left: auto;
 }
 
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
 .mt-20 {
   margin-top: 5rem;
 }
@@ -1376,18 +1408,18 @@ select {
   width: 1.75rem;
 }
 
+.w-fit {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-comic {
   width: 800px;
 }
 
 .w-5\/6 {
   width: 83.333333%;
-}
-
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
 }
 
 .min-w-max {
@@ -1442,6 +1474,10 @@ select {
 
 .max-w-2xl {
   max-width: 42rem;
+}
+
+.max-w-\[570px\] {
+  max-width: 570px;
 }
 
 .max-w-full {
@@ -1942,10 +1978,6 @@ select {
   border-bottom-right-radius: 0.5rem;
 }
 
-.rounded-tr-md {
-  border-top-right-radius: 0.375rem;
-}
-
 .rounded-tr-none {
   border-top-right-radius: 0px;
 }
@@ -2307,6 +2339,16 @@ select {
   background-color: rgb(255 255 255 / 0.5);
 }
 
+.bg-cyan-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(103 232 249 / var(--tw-bg-opacity));
+}
+
+.bg-blue-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -2543,6 +2585,16 @@ select {
   padding-bottom: 6rem;
 }
 
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.px-\[14px\] {
+  padding-left: 14px;
+  padding-right: 14px;
+}
+
 .py-0\.5 {
   padding-top: 0.125rem;
   padding-bottom: 0.125rem;
@@ -2753,6 +2805,10 @@ select {
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
+}
+
+.text-\[32px\] {
+  font-size: 32px;
 }
 
 .font-bold {
@@ -3148,8 +3204,8 @@ select {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.shadow-cyan-900 {
-  --tw-shadow-color: #164e63;
+.shadow-cyan-300 {
+  --tw-shadow-color: #67e8f9;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -3160,21 +3216,6 @@ select {
 
 .shadow-green-100 {
   --tw-shadow-color: #dcfce7;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-cyan-200 {
-  --tw-shadow-color: #a5f3fc;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-cyan-100 {
-  --tw-shadow-color: #cffafe;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-cyan-300 {
-  --tw-shadow-color: #67e8f9;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -3987,6 +4028,10 @@ svg #main-circ {
   --tw-bg-opacity: 0.05;
 }
 
+.hover\:bg-opacity-90:hover {
+  --tw-bg-opacity: 0.9;
+}
+
 .hover\:bg-gradient-to-br:hover {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
@@ -4069,18 +4114,13 @@ svg #main-circ {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow-green-500:hover {
-  --tw-shadow-color: #22c55e;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.hover\:shadow-green-400:hover {
-  --tw-shadow-color: #4ade80;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .hover\:shadow-cyan-400:hover {
   --tw-shadow-color: #22d3ee;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.hover\:shadow-green-500:hover {
+  --tw-shadow-color: #22c55e;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -4294,6 +4334,12 @@ svg #main-circ {
 
 .focus\:ring-offset-gray-100:focus {
   --tw-ring-offset-color: #f3f4f6;
+}
+
+.focus-visible\:shadow-none:focus-visible {
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .active\:bg-cyan-600:active {
@@ -4850,6 +4896,10 @@ svg #main-circ {
     padding: 2.25rem;
   }
 
+  .sm\:p-12 {
+    padding: 3rem;
+  }
+
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -4890,6 +4940,10 @@ svg #main-circ {
 
   .sm\:text-\[22px\] {
     font-size: 22px;
+  }
+
+  .sm\:text-\[40px\] {
+    font-size: 40px;
   }
 }
 
@@ -5160,6 +5214,10 @@ svg #main-circ {
     margin-top: 0.5rem;
   }
 
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .lg\:mt-0 {
     margin-top: 0px;
   }
@@ -5180,12 +5238,12 @@ svg #main-circ {
     height: 100%;
   }
 
-  .lg\:w-auto {
-    width: auto;
-  }
-
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-auto {
+    width: auto;
   }
 
   .lg\:w-1\/4 {
@@ -5228,6 +5286,10 @@ svg #main-circ {
     align-items: center;
   }
 
+  .lg\:justify-between {
+    justify-content: space-between;
+  }
+
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -5248,8 +5310,9 @@ svg #main-circ {
     padding-bottom: 0.5rem;
   }
 
-  .lg\:pt-\[120px\] {
+  .lg\:py-\[120px\] {
     padding-top: 120px;
+    padding-bottom: 120px;
   }
 
   .lg\:pb-20 {
@@ -5274,6 +5337,10 @@ svg #main-circ {
   .lg\:text-\[22px\] {
     font-size: 22px;
   }
+
+  .lg\:text-\[36px\] {
+    font-size: 36px;
+  }
 }
 
 @media (min-width: 1280px) {
@@ -5294,6 +5361,14 @@ svg #main-circ {
     width: 33.333333%;
   }
 
+  .xl\:w-6\/12 {
+    width: 50%;
+  }
+
+  .xl\:w-5\/12 {
+    width: 41.666667%;
+  }
+
   .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -5310,6 +5385,10 @@ svg #main-circ {
   .xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .xl\:text-\[40px\] {
+    font-size: 40px;
   }
 }
 
