--- a/public/css/output.css
+++ b/public/css/output.css
@@ -872,6 +872,10 @@ select {
   margin: 0.5rem;
 }
 
+.-m-1 {
+  margin: -0.25rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1400,6 +1404,10 @@ select {
   width: 6rem;
 }
 
+.w-1\/3 {
+  width: 33.333333%;
+}
+
 .w-3 {
   width: 0.75rem;
 }
@@ -1657,24 +1665,12 @@ select {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-cols-8 {
-  grid-template-columns: repeat(8, minmax(0, 1fr));
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .grid-cols-12 {
   grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-
-.grid-cols-6 {
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.grid-cols-7 {
-  grid-template-columns: repeat(7, minmax(0, 1fr));
-}
-
-.grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .grid-rows-4 {
@@ -4975,6 +4971,10 @@ svg #main-circ {
     margin: 2.5rem;
   }
 
+  .md\:-m-2 {
+    margin: -0.5rem;
+  }
+
   .md\:-mx-4 {
     margin-left: -1rem;
     margin-right: -1rem;
@@ -5160,6 +5160,10 @@ svg #main-circ {
     padding: 1.5rem;
   }
 
+  .md\:p-2 {
+    padding: 0.5rem;
+  }
+
   .md\:p-7 {
     padding: 1.75rem;
   }
@@ -5317,13 +5321,26 @@ svg #main-circ {
     padding-bottom: 0.5rem;
   }
 
+  .lg\:px-32 {
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+
   .lg\:py-\[120px\] {
     padding-top: 120px;
     padding-bottom: 120px;
   }
 
+  .lg\:pt-12 {
+    padding-top: 3rem;
+  }
+
   .lg\:pb-20 {
     padding-bottom: 5rem;
+  }
+
+  .lg\:pt-24 {
+    padding-top: 6rem;
   }
 
   .lg\:text-base {
